--- a/home.html
+++ b/home.html
@@ -22,13 +22,13 @@
         </nav>
     </header>
     <main>
-        <h3>Welcome to my personal portfolio website!</h3>
+        <h3>Welcome to my personal portfolio website&#33;</h3>
         <p>I am a former NFL Scout and Cornell University graduate who decided to challenge himself by pivoting to a career in Software Development.
             On my website you will find links to my github account where you can see programs that I have created using my knowledge of Python, SQL, and HTML.
         </p>
         <figure>
             <img src="linkedin_prof_picture.jpg" alt="Ben Greenberg profile picture">
-            <figcaption>My profile picture!</figcaption>
+            <figcaption>My profile picture&#33;</figcaption>
         </figure>
     </main>
     <footer>
