--- a/about_me.html
+++ b/about_me.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Software Developer, Coding, Programmer, About Me, biography">
     <meta name="author" content="Benjamin Greenberg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Configures Metacharachters for SEO including author, viewport to work for all devices, keywords, and description-->
 </head>
 <body>
     <header>
@@ -20,6 +21,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <!-- Navbar found on each webpage -->
     </header>
     <main>
         <h3>About Me</h3>
@@ -30,9 +32,11 @@
         </p>
         <p>In my spare time I like to play piano, watch new and classic films, eat at new restaurants and travel with my wife, and explore Central Florida's local theme parks, attractions, and beaches. 
         </p>
+        <!-- Simple two paragraph about me section that describes my career progression and what led me to software development -->
     </main>
     <footer>
         <p>Webpage Authored by Ben Greenberg</p>
+        <!-- Footer found on each webpage -->
     </footer>
 </body>
 </html>
