--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Software Developer, Coding, Programmer">
     <meta name="author" content="Benjamin Greenberg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Configures Metacharachters for SEO including author, viewport to work for all devices, keywords, and description-->
 </head>
 <body>
     <header>
@@ -20,19 +21,23 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <!-- Navbar found one each webpage -->
     </header>
     <main>
         <h3>Welcome to my personal portfolio website&#33;</h3>
         <p>I am a former NFL Scout and Cornell University graduate who decided to challenge himself by pivoting to a career in Software Development.
             On my website you will find links to my github account where you can see programs that I have created using my knowledge of Python, SQL, and HTML.
+            <!-- One line summary for portfolio home page-->
         </p>
         <figure>
             <img src="linkedin_prof_picture.jpg" alt="Ben Greenberg profile picture">
             <figcaption>My profile picture&#33;</figcaption>
+            <!-- Image, caption, alternate text for screenreader for my profile picture -->
         </figure>
     </main>
     <footer>
         <p>Webpage Authored by Ben Greenberg</p>
+        <!-- Footer found on eachw ebpage -->
     </footer>
 </body>
 </html>
