--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Software Developer, Coding, Programmer, Projects, Python, SQL">
     <meta name="author" content="Benjamin Greenberg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Configures Metacharachters for SEO including author, viewport to work for all devices, keywords, and description-->
 </head>
 <body>
     <header>
@@ -20,6 +21,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <!-- Navbar found on each page of website -->
     </header>
     <main>
         <h3>Projets</h3>
@@ -48,8 +50,10 @@
             <p>The link to this program can be found <a href="https://github.com/BGreenberg79/CT_Module6_MiniProject_E-Commerce_API">here</a></p>
         </section>
     </main>
+    <!-- Main portion of webpage divided into a section for each project I discuss. Includes an a-tag/href with links to each github repository of each project and includes a screenshot of my contact management system project -->
     <footer>
         <p>Webpage Authored by Ben Greenberg</p>
+        <!-- Footer found on each webpage -->
     </footer>
 </body>
 </html>
