--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,12 @@
     <meta name="keywords" content="Software Developer, Coding, Programmer, Skills, Python, SQL, Flask, HTML">
     <meta name="author" content="Benjamin Greenberg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Configures Metacharachters for SEO including author, viewport to work for all devices, keywords, and description-->
+    <style>
+        table, th, td {border: 1px solid black; border-collapse:collapse;
+        }
+        /* Style section creates border for table */
+    </style>
 </head>
 <body>
     <header>
@@ -20,6 +26,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <!-- Navbar in header for all pages of website -->
     </header>
     <main>
         <h3>Skills</h3>
@@ -48,10 +55,12 @@
                 <td>HTML</td>
                 <td>Intermediate</td>
             </tr>
-        </table>    
+        </table>
+        <!-- Creates table in main section of skills page with each row having exactly two columns-->
     </main>
     <footer>
         <p>Webpage Authored by Ben Greenberg</p>
+        <!-- Footer found on all webpages -->
     </footer>
 </body>
 </html>
