--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Software Developer, Coding, Programmer, Contact information">
     <meta name="author" content="Benjamin Greenberg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Tab title and metacharacters for improved SEO for this webpage -->
 </head>
 <body>
     <header>
@@ -20,12 +21,74 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <!-- Navbar featured throughout the website -->
     </header>
     <main>
-        <h3>Contact Benjamin Today&#33;</h3>    
+        <h3>Contact Benjamin Today&#33;</h3>
+        <section>
+            <form action="/contact_form" method="post"> 
+                <!-- Sets location to send results and defines post method to record user input -->
+                <fieldset>
+                    <legend>Respondent Information</legend>
+
+                    <label for="first-name">First Name:</label>
+                    <input type="text" id="first-name" name="first-name" aria-label="First Name" placeholder="John" required>
+
+                    <label for="last-name">Last Name:</label>
+                    <input type="text" id="last-name" name="last-name" aria-label="Last Name" placeholder="Doe" required>
+
+                    <label for="email">Email Address:</label>
+                    <input type="email" id="email" name="email" aria-label="Email Address" placeholder="abc123@gmail.com" required>
+
+                    <label for="phone">Phone Number:</label>
+                    <input type="tel" id="phone" name="phone" aria-label="Phone Number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required> 
+                    <!-- fieldset includes contact information inputs and labels for person reaching out to me. Includes ARIA elements for accessibility in all inputs -->
+                </fieldset>
+                <fieldset>
+                    <legend>Response/Request</legend>
+                    
+                    <label for="message-type">Select Message Type:</label>
+                    <select id="message-type" name="message-type" aria-label="Select your message type" required>
+                        <option value="general-inquiry">General Inquiry</option>
+                        <option value="project-consult">Project Consultation</option>
+                        <option value="programming-discussion">Programming Discussion</option>
+                        <option value="professional-networking">Professional Networking</option>
+                        <!-- uses a drop down select menu to set topic of user response-->
+                    </select>
+
+                    <label for="response-message">Response Message:</label>
+                    <textarea id="response-message" name="response-message" aria-label="Response Message" rows="6" cols="65" required placeholder="Please enter your message to Benjamin here!"></textarea>
+                    <!-- Text area field allows user to respond with multiple lines -->
+                </fieldset>
+                <div role="alert" aria-live="assertive" id="error-message">Please be sure to fill out all fields!</div>
+                <!-- ARIA assertion for accessibility ensuring compatability with screen reader and that all fields are filled out -->
+                <input type="reset" value="Reset" aria-label="Reset">
+                <input type="submit" value="Submit" aria-label="Submit">
+                <!-- Buttons for reset and submission -->
+            </form>
+        </section>
+        <section>
+            <h4>Benjamin's Contact Information</h4>
+            <div>
+                <p>Email: placeholder_email@gmail.com</p>
+                <!-- My email address. Placeholder used for security -->
+            </div>
+            <div>
+                <p>Linkedin:</p>
+                <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="benjamin-greenberg1" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/benjamin-greenberg1?trk=profile-badge">Benjamin G.</a></div>
+                <!-- LinkedIn profile badge embedded -->
+            </div>
+            <div>
+                <p>Github <a href="https://github.com/BGreenberg79">Profile</a></p>
+                <!-- <iframe src="https://github.com/BGreenberg79" title="Github Profile"></iframe> Didn't work in attempt to embed and couldn't find linkedin style badge -->
+                <!-- Used a-tag/href to access github profile page as my attempt to use an iframe was unsuccessful -->
+            </div>
+        </section>  
     </main>
     <footer>
         <p>Webpage Authored by Ben Greenberg</p>
+        <!-- Footer with author info throughout website -->
     </footer>
 </body>
 </html>
